changes in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Akash, Hammer</title>
 	</head>
 	<body>
 		<nav>
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:akash.ucer.it@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/itakash010</a></li>
+        		<li><a href="https://github.com/itakash010">github.com/itakash010</a></li>
 			</ul>
 		</footer>
 	</body>
